--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,11 @@ p, h1, h2{
 .taglia{
   clip-path: polygon(0% 0%, 8% 100%, 92% 100%, 100% 0%);
   width: 75%;
+  z-index: 2;
+}
+
+.taglia > a{
+  text-decoration: none;
 }
 
 .righteous{
@@ -121,7 +126,7 @@ p, h1, h2{
   background-position: center center;
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 400px) {
   .meno{
     height: 33%;
   }
